--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <img src="" alt="">
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
